--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <li>Заведующая канцелярии, Чуйский областной центр семейной медицины (03.05.2005 - 26.09.2007)</li>
             <li>Ведущий специалист по финансам, Аламудунский районный отдел госстатистики (15.10.2007 - 01.11.2010)</li>
             <li>Специалист отдела антимонопольной политики, Министерство экономики КР (с 23.04.2012)</li>
-            <li>Ведущий специалист отдела экономического анализа, МЭ КР (09.08.2019 - по настоящее время)</li>
+            <li>Главный специалист отдела экономического анализа, МЭ КР (09.08.2019 - по настоящее время)</li>
         </ul>
     </section>
 
