--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             height: 120px;
             border-radius: 50%;
             object-fit: cover;
-            margin-bottom: 10px;
+            margin-top: 20px;
         }
         h1 {
             font-size: 28px;
