--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
             text-align: center;
             margin-bottom: 20px;
         }
-        .profile-pic {
-            width: 120px;
-            height: 120px;
-            border-radius: 50%;
-            object-fit: cover;
-            margin-top: 20px;
+      .profile-pic {
+    display: block;
+        margin: 0 auto; /* Центрирование изображения */
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    object-fit: cover;
         }
         h1 {
             font-size: 28px;
