--- a/index.html
+++ b/index.html
@@ -24,14 +24,12 @@
             text-align: center;
             margin-bottom: 20px;
         }
-      .profile-pic {
-    display: block;
-        margin: 0 auto; /* Центрирование изображения */
+    .profile-pic {
     width: 120px;
-    height: 120px;
+    height: 150px;
     border-radius: 50%;
     object-fit: cover;
-        }
+    margin-bottom: 0px;
         h1 {
             font-size: 28px;
             color: #1a1a1a;
