--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
             margin-bottom: 20px;
         }
     .profile-pic {
+    display: block;
+    margin: 0 auto;
     width: 120px;
     height: 150px;
     border-radius: 50%;
     object-fit: cover;
-    margin-bottom: 0px;
         h1 {
             font-size: 28px;
             color: #1a1a1a;
